<resources>
    <string name="app_name">Projet_Android</string>
    <string name="lblbutton">Button</string>
    <string name="lblimage">lblimage</string>
    <string name="lbltaille">Taille :</string>
    <string name="lbltogray_1">TO_GRAY_1</string>
    <string name="lbl_to_gray_2">TO_GRAY_2</string>
    <string name="lbltext">Hello and welcom</string>
    <string name="lbl_text_Hi">TextView</string>
    <string name="lbl_size">TextView</string>
    <string name="lbl_next_tp"><![CDATA[Next TP -->]]></string>
    <string name="lbl_next_tp2"><![CDATA[Next TP -->]]></string>
    <string name="lbl_colorize">Colorize</string>
    <string name="lbl_canned_color_1">Canned_Color_1</string>
    <string name="lbl_canned_color_2">CANNED_COLOR_2</string>
    <string name="lbl_decreases_contrast">decreases contrast</string>
</resources>
