<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idtext"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/lbltext" />

        <TextView
            android:id="@+id/idtaille2"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/lbl_size" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_next_tp2" />

        <Button
            android:id="@+id/idbutton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_decreases_contrast" />

        <ImageView
            android:id="@+id/idimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lblimage"
            app:srcCompat="@drawable/fruit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>